Remove check for DPMS in PowerSaveBlocker

The DPMS extension is not available in XWayland, but the D-Bus APIs for
controlling power blocking still work.  Since we can't rely on the presence of
DPMS for power blocking any more, remove the check altogether.

The check for DPMS was done because some GNOME/Freedesktop D-Bus service
managers would enable DPMS on-the-fly even when users had DPMS disabled.  Chrome
shouldn't have to worry about this case though, since DPMS is a layer beneath
the D-Bus APIs.  It's the responsibility of the service managers to do this
check, not clients.

BUG=671005
R=thestig
TBR=scottmg

Change-Id: I232da0ab0f1ab40e766edf882ce442bf9c723c51
Reviewed-on: https://chromium-review.googlesource.com/927101
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537987}
Former-commit-id: f401ca34a9bb4497e6b9335f493c15167a90b366